# softrender-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: logger.hpp  tga_handler.hpp  timer.hpp
src/: main.cpp  tga_handler.cpp
